force-app/main/default/objects/Cash_Statement_Setting__c/Cash_Statement_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Cash Statement Setting</label>
</CustomObject>