force-app/main/default/objects/Cash_Statement_Setting__c/fields/Day_for_week_split__c.field-meta.xml
<CustomField>
    <fullName>Day_for_week_split__c</fullName>
    <label>Day for week split</label>
    <length>3</length>
    <type>Text</type>
</CustomField>