force-app/main/default/objects/Cash_Statement_Setting__c/fields/Greater_than_Min_Amt_Color__c.field-meta.xml
<CustomField>
    <fullName>Greater_than_Min_Amt_Color__c</fullName>
    <label>Greater than Min Amt Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>