force-app/main/default/objects/Cash_Statement_Setting__c/fields/Less_than_Min_Amount_Color__c.field-meta.xml
<CustomField>
    <fullName>Less_than_Min_Amount_Color__c</fullName>
    <label>Less than Min Amount Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>