force-app/main/default/objects/Cash_Statement_Setting__c/fields/Minimum_Surplus_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Surplus_Amount__c</fullName>
    <label>Minimum Surplus Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>